# Computer_vision_course

./: .gitignore
Lab3/Task1/: task1.cpp
Lab3/Task2/: CMakeLists.txt  task2.cpp
Lab3/Task3/: CMakeLists.txt  task3.cpp
Lab3/Task4/: CMakeLists.txt  task4.cpp
Lab3/Task5/: CMakeLists.txt  task5.cpp
Lab3/Task6/: CMakeLists.txt  task6.cpp
Lab5/task1/: CMakeLists.txt  task1.cpp
Lab5/task2/: CMakeLists.txt  task2.cpp
Lab5/task3/: CMakeLists.txt  my_functions.cpp  my_functions.h  task3.cpp
Lab6/Task1/: task1.cpp
lab2/task 2 and 3 and 4/: CMakeLists.txt  ImageFilters.cpp  ImageFilters.h  task2.cpp
lab2/task 5 and 6/: CMakeLists.txt  task3.cpp
lab2/task1/: task1.cpp
